Setup configuration and calls to Graph API.

--- a/templates/seed_list.html
+++ b/templates/seed_list.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <ul>
-  {% for interest in interests %}
+  {% for interest in results %}
     <li>{{ interest }}</li>
   {% endfor %}
 </ul>
