--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,52 @@
 <!doctype html>
-<form action="/seed_list" method="POST">
-  Interest #1:<br>
-  <input type="text" name="interest-1"><br>
-  Interest #2:<br>
-  <input type="text" name="interest-2"><br>
-  Interest #3:<br>
-  <input type="text" name="interest-3"><br>
-  <input type="submit" value="Check">
-</form>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="static/jquery-ui-1.12.1.custom/jquery-ui.min.css">
+</head>
+<body>
+  <form action="/seed_list" method="POST">
+    Interest #1:<br>
+    <input type="text" name="interest-1" id="tags"><br>
+    Interest #2:<br>
+    <input type="text" name="interest-2" id="tags"><br>
+    Interest #3:<br>
+    <input type="text" name="interest-3" id="tags"><br>
+    <input type="submit" value="Check">
+  </form>
+</body>
+
+<script src="static/jquery-ui-1.12.1.custom/external/jquery/jquery.js"></script>
+<script src="static/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+<script>
+  $( function() {
+    var availableTags = [
+      "ActionScript",
+      "AppleScript",
+      "Asp",
+      "BASIC",
+      "C",
+      "C++",
+      "Clojure",
+      "COBOL",
+      "ColdFusion",
+      "Erlang",
+      "Fortran",
+      "Groovy",
+      "Haskell",
+      "Java",
+      "JavaScript",
+      "Lisp",
+      "Perl",
+      "PHP",
+      "Python",
+      "Ruby",
+      "Scala",
+      "Scheme"
+    ];
+    $( "#tags" ).autocomplete({
+      source: availableTags
+    });
+  } );
+</script>
+</html>
