Make autocomplete route.

--- a/templates/main.html
+++ b/templates/main.html
@@ -20,32 +20,9 @@
 <script src="static/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 <script>
   $( function() {
-    var availableTags = [
-      "ActionScript",
-      "AppleScript",
-      "Asp",
-      "BASIC",
-      "C",
-      "C++",
-      "Clojure",
-      "COBOL",
-      "ColdFusion",
-      "Erlang",
-      "Fortran",
-      "Groovy",
-      "Haskell",
-      "Java",
-      "JavaScript",
-      "Lisp",
-      "Perl",
-      "PHP",
-      "Python",
-      "Ruby",
-      "Scala",
-      "Scheme"
-    ];
-    $( "#tags" ).autocomplete({
-      source: availableTags
+    $("input").autocomplete({
+      source: "adinterest",
+      minLength: 3
     });
   } );
 </script>
