Make selection based suggestions.

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
     <input type="text" name="interest-2" id="tags"><br>
     Interest #3:<br>
     <input type="text" name="interest-3" id="tags"><br>
-    <input type="submit" value="Check">
+    <input type="submit" name="seed" value="Check">
   </form>
 </body>
 
