Add suggestions based on seed list.

--- a/templates/result_list.html
+++ b/templates/result_list.html
@@ -7,7 +7,7 @@
         <table class="table table-sm table-dark">
           <thead>
             <tr>
-              <th>Results</th>
+              <th>Results ({{ results | length }})</th>
             </tr>
           </thead>
           <tbody>
