--- a/templates/main.html
+++ b/templates/main.html
@@ -2,18 +2,18 @@
 {% block content %}
 <div class="row">
   <div class="col-sm-3">
-    <form action="/result_list" method="POST" id="interest_form">
+    <form action="/result_list" method="POST" id="interest-form">
       <div class="form-group">
-        <label for="interest_input">Interest #1:</label>
-        <input type="text" class="form-control" name="interest-1" id="interest_input">
+        <label for="interest-input">Interest #1:</label>
+        <input type="text" class="form-control" name="interest-1" id="interest-input-1">
       </div>
       <div class="form-group">
-        <label for="interest_input">Interest #2:</label>
-        <input type="text" class="form-control" name="interest-2" id="interest_input">
+        <label for="interest-input">Interest #2:</label>
+        <input type="text" class="form-control" name="interest-2" id="interest-input-2">
       </div>
       <div class="form-group">
-        <label for="interest_input">Interest #3:</label>
-        <input type="text" class="form-control" name="interest-3" id="interest_input">
+        <label for="interest-input">Interest #3:</label>
+        <input type="text" class="form-control" name="interest-3" id="interest-input-3">
       </div>
       <button type="submit" class="btn btn-primary" name="seed">Submit</button>
     </form>
