Add link to start.

--- a/templates/result_list.html
+++ b/templates/result_list.html
@@ -24,7 +24,7 @@
           </tbody>
         </table>
       </div>
-      <button type="submit" class="btn btn-primary" name="curated">Submit</button>
+      <button type="submit" class="btn btn-primary" name="curated">Next</button>
     </form>
   </div>
   <div class="col-sm">
@@ -44,6 +44,7 @@
         {% endfor %}
       </tbody>
     </table>
+    <a href="/" class="btn btn-success">Done</a>
   </div>
 </div>
 {% endblock %}
