--- a/templates/start.html
+++ b/templates/start.html
@@ -15,7 +15,7 @@
         <label for="interest-input">Interest #3:</label>
         <input type="text" class="form-control" name="interest-3" id="interest-input-3">
       </div>
-      <button type="submit" class="btn btn-primary" name="seed">Submit</button>
+      <button type="submit" class="btn btn-primary" name="seed">Next</button>
     </form>
   </div>
 </div>
